--- a/public/frontend/style/berita/berita.css
+++ b/public/frontend/style/berita/berita.css
@@ -8,7 +8,11 @@ html {
   scroll-behavior: smooth;
 }
 
-.section-news-content {
-  margin-top: -50px;
+.section-news-detail h3 {
+  font-family: "Playfair Display";
+  font-weight: bold;
+  font-size: 32px;
+  color: #004420;
+  margin-bottom: 30px;
 }
 /*# sourceMappingURL=berita.css.map */
