--- a/public/frontend/style/main.css
+++ b/public/frontend/style/main.css
@@ -37,7 +37,7 @@ html {
 
 .navbar .navbar-brand img {
   margin-top: 5px;
-  max-height: 50px;
+  max-height: 45px;
 }
 
 .navbar .nav-item .nav-link {
@@ -87,7 +87,7 @@ html {
 }
 
 .section-statistic-content {
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .section-news-content {
@@ -115,10 +115,10 @@ html {
 }
 
 .section-news-content .figure-caption .news-content {
+  margin-top: -5px;
   font-weight: normal;
   font-size: 16px;
   color: #000;
-  max-height: 350px !important;
 }
 
 .section-news-content .figure-caption .news-content p {
@@ -179,6 +179,10 @@ html {
   font-weight: 500;
   font-size: 20px;
   color: #0c562e;
+}
+
+.section-galeri-content img {
+  max-height: 344px !important;
 }
 
 .section-video-content {
