modifikasi file css & tambah layouts

--- a/public/frontend/style/main.css
+++ b/public/frontend/style/main.css
@@ -301,4 +301,12 @@ html {
   pointer-events: auto;
   opacity: 1;
 }
+
+.section-daftar-content h1 {
+  font-family: "Playfair Display";
+  font-weight: bold;
+  font-size: 32px;
+  color: #004420;
+  margin-bottom: 30px;
+}
 /*# sourceMappingURL=main.css.map */
