--- a/public/frontend/style/main.scss
+++ b/public/frontend/style/main.scss
@@ -310,3 +310,15 @@
     }
     
     // End to-top
+    // Pendaftaran
+    .section-daftar-content {
+        h1 {
+            font-family: "Playfair Display";
+            font-weight: bold;
+            font-size: 32px;
+            color: #004420;
+            margin-bottom: 30px;
+        }
+    }
+    
+    // End Pendaftaran
